- New post, TheTV, Clean Architecture en Android: primeros pasos - Project configuration changes - Added reading time

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,19 +29,19 @@
 
       {% if site.twitter %}
       <li class="social-profiles-item">
-       <a href="{{ site.twitter }}" class="social-profiles-link"><i class="ion ion-logo-twitter"></i></a>
+       <a href="{{ site.twitter }}" target="_blank" class="social-profiles-link"><i class="ion ion-logo-twitter"></i></a>
       </li>
       {% else %} {% endif %}
 
       {% if site.github %}
       <li class="social-profiles-item">
-        <a href="{{ site.github }}" class="social-profiles-link"><i class="ion ion-logo-github"></i></a>
+        <a href="{{ site.github }}" target="_blank" class="social-profiles-link"><i class="ion ion-logo-github"></i></a>
       </li>
       {% else %} {% endif %}
 
       {% if site.linkedin %}
       <li class="social-profiles-item">
-        <a href="{{ site.linkedin }}" class="social-profiles-link"><i class="ion ion-logo-linkedin"></i></a>
+        <a href="{{ site.linkedin }}" target="_blank" class="social-profiles-link"><i class="ion ion-logo-linkedin"></i></a>
       </li>
       {% else %} {% endif %}
     </ul>
