--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,18 @@
       <div class="col col-12">
         <div class="footer-bottom">
           <div class="copyright">
-            <p><a href="{{site.baseurl}}/">rcorchero.com</a> &copy; {{site.time | date: '%Y'}} - Galada Theme by <a href="https://github.com/artemsheludko">Artem Sheludko</a></p>
+            <p><a href="{{site.baseurl}}/">rcorchero.com</a> &copy; {{site.time | date: '%Y'}} - Galada Theme by <a href="https://github.com/artemsheludko" target="_blank">Artem Sheludko</a></p>
           </div>
           <div class="footer-social">
             <ul class="list-reset">
               {% if site.twitter %}
-              <li><a href="{{ site.twitter }}">Twitter</a></li>
+              <li><a href="{{ site.twitter }}" target="_blank">Twitter</a></li>
               {% else %} {% endif %}
               {% if site.twitter %}
-              <li><a href="{{ site.github }}">GitHub</a></li>
+              <li><a href="{{ site.github }}" target="_blank">GitHub</a></li>
               {% else %} {% endif %}
               {% if site.twitter %}
-              <li><a href="{{ site.linkedin }}">LinkedIn</a></li>
+              <li><a href="{{ site.linkedin }}" target="_blank">LinkedIn</a></li>
               {% else %} {% endif %}
             </ul>
           </div>
