--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -78,6 +78,25 @@
     margin-bottom: 5px;
   }
   .post-date {
+    position: relative;
+    padding-right: 20px;
+    margin-right: 15px;
+    span {
+      font-size: 12px;
+    }
+    &:after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      display: block;
+      width: 2px;
+      height: 12px;
+      background: $border-color;
+    }
+  }
+  .post-reading-time {
     span {
       font-size: 12px;
     }
